# hydromind-contracts

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-test.in  requirements-test.txt
docs/: PROGRAM_CONTRACTS_INDEX.md
hydromind_contracts/: __init__.py  actuator.py  agent.py  cli.py  contract_index.py  control.py  detection.py  digital_twin.py  dispatch.py  engine_registry.py  event.py  hydraulic_solver.py  identification.py  mcp_tool.py  message_bus.py  models.py  optimization.py  prediction.py  program_contracts.py  program_validation.py  role_registry.py  scada.py  scheduling.py  sensor.py  simulation.py  skill.py  water_object_report.py  water_quality.py
schemas/: agent_network.schema.json  agent_node_profile.schema.json  agent_profile.schema.json  agent_skill_binding.schema.json  algorithm_benchmark_record.schema.json  boundary_condition_set.schema.json  capability_mcp_server.schema.json  case_manifest.schema.json  dispatch_topology.schema.json  distributed_task_receipt.schema.json  execution_lane.schema.json  fallback_policy.schema.json  final_report.schema.json  gateway_mcp_route.schema.json  hourly_schedule_result.schema.json  lifecycle_phase.schema.json  management_level.schema.json  mcp_invocation_policy.schema.json  model_capability_matrix.schema.json  model_delivery.schema.json  model_eval_summary.schema.json  model_registry_entry.schema.json  model_routing_policy.schema.json  model_selection_trace.schema.json  readiness_board.schema.json  release_manifest.schema.json  review_bundle.schema.json  role_profile.schema.json  (+13 more)
(+22 files in other folders)
