[project]
name = "hydromind-contracts"
version = "0.1.0"
description = "HydroMind contract models, schemas, and validators."
requires-python = ">=3.11"

[project.scripts]
hydromind-contracts = "hydromind_contracts.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hydromind_contracts"]

[tool.pytest.ini_options]
pythonpath = ["."]
